--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 body {
-    background: rgb(204, 204, 204);
+    background: rgb(200, 200, 200);
+    /*テキスト選択の無向化 */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    margin: 0;
+    padding: 0;
+}
+
+canvas{
+    margin: 30px;
+}
+
+.canvas_wrapper {
+    width: 1100px;
+    margin: 0 auto;
+}
+
+.canvas_wrapper h2 {
+    margin: 0 auto;
+    text-align: center;
+    font-weight: 300;
 }
